// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountUsagePlan /> should not render without subscriptions 1`] = `null`;

exports[`<AccountUsagePlan /> should render properly 1`] = `
.emotion-17 {
  padding: 32px;
}

.emotion-0 {
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 img {
  margin-right: 12px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 44px;
}

.emotion-3 {
  color: #b3b3b3;
  padding-bottom: 2px;
}

.emotion-2 {
  font-weight: 700;
}

.emotion-5 {
  color: #cdf6a8;
}

.emotion-14 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-16 {
  padding-top: 16px;
  padding-left: 44px;
}

.emotion-15 {
  color: #b3b3b3;
  font-style: italic;
}

<div
  className="emotion-17"
>
  <h3
    className="emotion-0"
  >
    Usage Plan:
  </h3>
  <div
    className="emotion-0"
  >
    <h4
      className="emotion-1"
    >
      <img
        alt=""
        src="/icons/videos.png"
        width={32}
      />
       Video:
       
      300
       hours
    </h4>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-3"
      >
        Used:
         
        <span
          className="emotion-2"
        >
          100
          /hrs
        </span>
      </div>
      <div
        className="emotion-5"
      >
        Available:
         
        <span
          className="emotion-2"
        >
          200
          /hrs
        </span>
      </div>
    </div>
  </div>
  <div
    className="emotion-14"
  >
    <h4
      className="emotion-1"
    >
      <img
        alt=""
        src="/icons/images.png"
        width={32}
      />
       Image / Documents: 
      30,000
    </h4>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-3"
      >
        Used:
         
        <span
          className="emotion-2"
        >
          20,000
          
        </span>
      </div>
      <div
        className="emotion-5"
      >
        Available:
         
        <span
          className="emotion-2"
        >
          10,000
          
        </span>
      </div>
    </div>
  </div>
  <div
    className="emotion-16"
  >
    <h4>
      Additional Modules:
    </h4>
    <span
      className="emotion-15"
    >
      None
    </span>
  </div>
</div>
`;

exports[`<AccountUsagePlan /> should render properly with over usage 1`] = `
.emotion-22 {
  padding: 32px;
}

.emotion-5 {
  padding-bottom: 16px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 img {
  margin-right: 12px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 44px;
}

.emotion-8 {
  color: #b3b3b3;
  padding-bottom: 2px;
}

.emotion-7 {
  font-weight: 700;
}

.emotion-10 {
  color: #cdf6a8;
}

.emotion-19 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-21 {
  padding-top: 16px;
  padding-left: 44px;
}

.emotion-20 {
  color: #b3b3b3;
  font-style: italic;
}

.emotion-4 {
  margin-top: -16px;
  margin-bottom: 16px;
}

.emotion-3 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #000000;
  font-weight: 500;
}

.emotion-0 {
  font-weight: 400;
}

<div
  className="emotion-22"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <div
        className="emotion-2"
      >
        <svg
          color="#c92300"
          data-file-name="warning.svg"
          height={20}
        />
        <div
          className="emotion-1"
          role="alert"
        >
          <div
            className="emotion-0"
          >
            You are
             
            <strong>
              20
               hours over
            </strong>
             your video plan
             and 
            <strong>
              40
               assets over
            </strong>
             your image & documents plan
            . Contact your Account Manager to add more resources.
          </div>
        </div>
      </div>
    </div>
  </div>
  <h3
    className="emotion-5"
  >
    Usage Plan:
  </h3>
  <div
    className="emotion-5"
  >
    <h4
      className="emotion-6"
    >
      <img
        alt=""
        src="/icons/videos.png"
        width={32}
      />
       Video:
       
      300
       hours
    </h4>
    <div
      className="emotion-11"
    >
      <div
        className="emotion-8"
      >
        Used:
         
        <span
          className="emotion-7"
        >
          320
          /hrs
        </span>
      </div>
      <div
        className="emotion-10"
      >
        Available:
         
        <span
          className="emotion-7"
        >
          -20
          /hrs
        </span>
      </div>
    </div>
  </div>
  <div
    className="emotion-19"
  >
    <h4
      className="emotion-6"
    >
      <img
        alt=""
        src="/icons/images.png"
        width={32}
      />
       Image / Documents: 
      30,000
    </h4>
    <div
      className="emotion-11"
    >
      <div
        className="emotion-8"
      >
        Used:
         
        <span
          className="emotion-7"
        >
          30,040
          
        </span>
      </div>
      <div
        className="emotion-10"
      >
        Available:
         
        <span
          className="emotion-7"
        >
          -40
          
        </span>
      </div>
    </div>
  </div>
  <div
    className="emotion-21"
  >
    <h4>
      Additional Modules:
    </h4>
    <span
      className="emotion-20"
    >
      None
    </span>
  </div>
</div>
`;
